[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"


[build]
target = "arm-unknown-linux-gnueabihf"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# cargo rustc -- -C link-args="-e __start -static -nostartfiles"
